src/index.css
*{
  box-sizing: border-box;
}

body{
  font-family: 'Dosis', sans-serif;
  background-color: var(--light);
  height: 100vh;
}

:root {
  --primary: #750D37;
  --secondary: #B3DEC1;
  --tertiary: #DBF9F0;
  --light: #F7F9F7;
  --dark: #210124;
}

p{
  font-size: 20px;
}

.indent{
  text-indent: 20px;
}

.background-primary{
  background-color: var(--primary);
}

.background-secondary{
  background-color: var(--secondary);
}

.background-tertiary{
  background-color: var(--tertiary);
}

.background-light{
  background-color: var(--light);
}

.background-dark{
  background-color: var(--dark);
}

.color-primary{
  color: var(--primary);
}

.color-secondary{
  color: var(--secondary);
}

.color-tertiary{
  color: var(--tertiary);
}

.color-light{
  color: var(--light);
}

.color-dark{
  color: var(--dark);
}

/* component styling */

.wrapper{
  min-height: 100vh;
  width: 100vw;
}

header{
  border-bottom: solid 6px var(--secondary);
  border-left: solid 6px var(--secondary);
  border-right: solid 6px var(--secondary);
}

.disclaimer{
  font-size: 12px;
  color: var(--primary);
  padding: 14px;
}

footer{
  border-top: solid 6px var(--secondary);
  border-left: solid 6px var(--secondary);
  border-right: solid 6px var(--secondary);
}

footer a{
  font-size: 20px;
}

footer i{
  font-size: 40px;
}

.img-container{
  width: 90%;
  border-radius: 40px;
  display: flex;
  justify-content: center;
  box-shadow: 0px 0px 30px rgba(33, 1, 36, 0.20); 
  background: linear-gradient(-45deg, #F7F9F7, #DBF9F0, #B3DEC1, #750D37, #210124);
  background-size: 300% 300%;
  animation: gradient 15s ease infinite;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.img-rounded{
  border-radius: 40px;
  width: 400px;
  height: auto;
  border: solid 2px var(--dark);
}

.about-me-text{
  margin-top: 60px;
  border-top: solid 4px var(--primary);
}

.paragraph-description{
  font-size: 24px;
  margin-top: 26px;
}

.paragraph-content{
  margin-left: 20px;
}

.paragraph-description-closure{
  font-size: 24px;
  margin-top: 12px;
}

.paragraph-description span{
  color: var(--primary);
}

.navigation-active{
  color: var(--dark);
  font-size:large;
  background: var(--secondary)
}

.navigation-item{
  cursor: pointer;
  font-size: larger;
  padding: 18px 10px;
  transition: .2s ease-in-out;
}

.a-light{
  text-decoration: none;
  color: var(--light);
}

.a-light:hover{
  color: var(--primary);
}

section a{
  text-decoration: none;
  color: var(--dark);
}

section a:hover{
  color: var(--primary);
}

footer a{
  text-decoration: none;
  color: var(--light);
}

footer a:hover{
  color: var(--secondary);
}

.a2{
  text-decoration: none;
  color: var(--primary);
}

.a2:hover{
  color: var(--dark);
}

ul{
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.svg-img:hover{
  color:var(--secondary)
}

.top-border{
  border-top: solid 6px var(--secondary);
}

.bottom-border{
  border-bottom: solid 6px var(--secondary);
}

/* project card styles */
.project-card{
  margin: 40px 20px 40px 60px;
  border-radius: 16px;
  max-width: 560px;
  min-height: 340px;
  display: flex;
  align-items: center;
  padding: 20px;
  box-shadow: 0px 0px 20px rgba(33, 1, 36, 0.35);
  transition: all .3s ease-in-out;
}

.project-card:hover{
  transform: scale(1.1);
  box-shadow: 0px 0px 50px rgba(33, 1, 36, 0.5);
}

.project-picture{
  width: 70%;
  height: 90%;
  overflow: hidden;
  border-radius: 16px;
  transform: translateX(-60px);
  box-shadow: 0px 0px 10px rgba(0,0,0,.2);
  transition: 0.2s ease-in-out;
}

.image{
  display: block;
  object-fit: cover;
}

.overlay{
  -webkit-mask-image: -webkit-radial-gradient(white, black);
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .3s ease-in-out;
  overflow: hidden;
}

.project-picture:hover .overlay{
  opacity: 1;
  background-color: rgba(117, 13, 55, 0.5);
}

.hidden-text{
  color: white;
  font-size: 24px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.project-card-content{
  display: flex;
  flex-direction: column;
  width: 70%;
  font-size: 26px;
  justify-content: space-between;
  height: 100%;
}

.project-title{
  color: var(--dark);
  font-size: 36px;
  margin: 0;
  padding-bottom: 4px;
  border-bottom: 4px solid var(--primary);
  text-align: center;
}

.project-text{
  font-size: 18px;
  padding: 0px 4px;
  margin: 0px;
}

img{
  width: 100%;
  height: 100%;
}

/* button styles */

.btn-a{
  cursor: pointer;
  text-decoration: none;
  border-radius: 50px;
  text-align: center;
  padding: 4px;
  box-shadow: 2px 2px 10px rgba(0,0,0,.4);
  background-image: linear-gradient(45deg, var(--primary), var(--dark));
  background-size: 1px 100px;
  background-position: 0 -10px;
  transition: all 0.2s ease-in-out;
}

.btn-a:hover{
  color: var(--light);
  box-shadow: 0px 0px 12px var(--dark);
  background-position: 1px -50px;
  filter: brightness(1.2);
}

/* Icon Styling */

.resume-card{
  height: 70%;
  background: var(--tertiary);
  border-radius: 12px;
  padding: 6px;
  box-shadow: 2px 2px 10px rgba(0,0,0,.3);
}

.resume-icon{
  font-size: 200px;
  margin: 40px 20px;
  background: var(--secondary);
  border-radius: 20px;
  border-top-right-radius: 70px;
}

.tech-images{
  height: 80px;
  width: auto;
  margin: 20px
}

.tech-images-long{
  height: 40px;
  width: auto;
  margin: 12px
}

/* Resume Page Styling */
ul{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-content: space-around;
}

.tech-li{
  font-size: 20px;
  background: var(--primary);
  border-radius: 12px;
  padding: 12px 6px;
  box-shadow: 2px 2px 10px rgba(0,0,0,.3);
  color: var(--light);
  text-align: center;
}

.contact-info-box p{
  font-size: 22px;
  margin: 0px;
}

.contact-info-box i{
  color: var(--light);
  font-size: 28px;
  padding-right: 4px;
}

.contact-form{
  background: var(--tertiary);
  margin: 40px 0;
  padding: 30px;
  border-radius: 12px;
  box-shadow: 2px 2px 30px rgba(0,0,0,.2);
}

@media only screen and (max-width: 768px) {
  
  .navigation-active{
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
  }
  
  .project-card{
    flex-direction: column;
    margin: 50px 0px;
    padding: 20px 0px;
  }

  .project-card:hover{
    transform: none;
    box-shadow: 0px 0px 50px rgba(33, 1, 36, 0.5);
  }

  .project-picture{
    width: 84%;
    height: 90%;
    transform: translateY(-50px);
  }

  .project-card-content {
    width: 80%;
  }

  .project-text {
    margin: 10px;
  }

  .contact-form {
    padding: 12px;
  }

  .contact-info-box p {
    margin: 8px 0px;
  }

  .contact-info-box {
    flex-direction: column;
  }

  .paragraph-description{
    font-size: 20px;
  }

  .paragraph-content{
    font-size: 18px;
  }

  .img-rounded {
    width: 280px;
  }

  .about-me-text{
    margin-top: 30px;
  }
}

